--- a/frontend/src/components/heroImgCss.css
+++ b/frontend/src/components/heroImgCss.css
@@ -35,3 +35,18 @@
 .slideStylesWidthBackground::after {
     background-image: linear-gradient(to right, #00b09b, #96c93d);
 }
+
+.FBloginButton{
+    padding: 0.6rem 0.8rem;
+    width: 100%;
+    color: #333;
+    display: flex;
+    gap: 0.3rem;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px 5px;
+    border:  #239AF7 3px solid;
+    background: #fff;
+    font-size: 1.2rem;
+}
+
